# solid-rpc-rs

./: Cargo.toml  README.md  build.rs  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.module.css  App.tsx  main.rs
src-backend/: config.rs  main.rs
src-backend/routes/: mod.rs  rpc.rs  spa.rs
